반응형피그마완성

--- a/index.html
+++ b/index.html
@@ -121,36 +121,55 @@
             </div>
         </section>
         <!-- new_item -->
-        <section class="new_swiper_bg">
-            <div class="new_swiper">
+        <section class="new_item_bg">
+            <div class="new_item">
                 <h2>NEW ITEM</h2>
-                <div class="product">
-                    <div class="left">
-                        <!-- swiper -->
-                        <div class="swiper" id="new">
-                            <!-- Additional required wrapper -->
-                            <div class="swiper-wrapper">
-                                <!-- Slides -->
-                                <a href="#" class="swiper-slide slide1"></a>
-                                <a href="#" class="swiper-slide slide2"></a>
-                                <a href="#" class="swiper-slide slide3"></a>
-                            </div>
-                            <!-- If we need pagination -->
-                            <div class="swiper-pagination"></div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
+                <!-- Slider main container -->
+                <div class="swiper" id="bottom_slide">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide slide1">
+                            <a href="#" class="left"><img src="./images/main/new_item1.jpg" alt=""></a>
+                            <a href="#" class="right">
+                                <h3>쿨쓰루쓰루 파운데이션 SPF30,<br>PA++ 013포세린 30ml</h3>
+                                <p class="price"><em>10%</em> 18,900원</p>
+                                <div class="arrival">
+                                    <img src="./images/main/past_deliver.png" alt="">
+                                    <span>도착보장</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper-slide slide2">
+                            <a href="#" class="left"><img src="./images/main/new_item2.jpg" alt=""></a>
+                            <a href="#" class="right">
+                                <h3>컴플리먼트 시리즈 쿠션 SPF50+,<br>PA+++ 보라</h3>
+                                <p class="price"><em>15%</em> 25,200원</p>
+                                <div class="arrival">
+                                    <img src="./images/main/past_deliver.png" alt="">
+                                    <span>도착보장</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper-slide slide3">
+                            <a href="#" class="left"><img src="./images/main/new_item3.jpg" alt=""></a>
+                            <a href="#" class="right">
+                                <h3>스텝베이직 244 빈티지발렌타인</h3>
+                                <p class="price"><em>10%</em> 25,200원</p>
+                                <div class="arrival">
+                                    <img src="./images/main/past_deliver.png" alt="">
+                                    <span>도착보장</span>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                    <a href="#" class="right">
-                        <h3>쿨쓰루쓰루 파운데이션 SPE30,<br>PA++ 013포세린 30ml</h3> 
-                        <p><em>25%</em> 18,900원</p>
-                        <div class="arrival">
-                            <img src="./images/main/past_deliver.png" alt="">
-                            <span>도착보장</span>
-                        </div>
-                    </a>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
                 </div>
+                <div class="swiper-navigation"></div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
         </section>
         <!-- foundation_bnr -->
