상품리스트스와이퍼시도

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Document</title>
+    <title>아멜리</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/ameli_favicon.ico" type="image/x-icon">
     <link rel="icon" href="./images/ameli_favicon.ico" type="image/x-icon">
@@ -19,16 +19,18 @@
 <body>
     <!-- header -->
     <header>
-        <div class="top">
-            <div class="left">
-                <a href="https://www.naver.com/" class="naver"><img src="./images/naver.logo.png" alt="NAVER"></a>
-                <a href="#">네이버 쇼핑</a>
-            </div>
-            <div class="right">
-                <a href="#">로그인</a>
-                <a href="#">회원가입</a>
-                <a href="#">고객센터</a>
-                <a href="#" class="menu"><img src="./images/menu.png" alt=""></a>
+        <div class="top_bg">
+            <div class="top">
+                <div class="left">
+                    <a href="https://www.naver.com/" class="naver"><img src="./images/naver.logo.png" alt="NAVER"></a>
+                    <a href="#">네이버 쇼핑</a>
+                </div>
+                <div class="right">
+                    <a href="./login.html">로그인</a>
+                    <a href="#">회원가입</a>
+                    <a href="#">고객센터</a>
+                    <a href="#" class="menu"><img src="./images/menu.png" alt=""></a>
+                </div>
             </div>
         </div>
         <div class="middle">
